Prevent cards from shifting on delete.

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -118,6 +118,8 @@ body {
 }
 
 .card {
+  position: absolute;
+
   width: 200px;
   height: 120px;
   padding: 10px;
